fix align functionalies

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+.large_box {
+    height: 600px;
+    width: 100%;
+    display: inline-block;
+    border:1px solid #818181;
+    margin-top: 1%;
+}
+
+.small_box {
+    height: 600px;
+    width: 100%;
+    display: inline-block;
+}
+
 span.bold {
     font-weight: bold;
     display: inline-block;
@@ -27,3 +41,4 @@ span.underline_false {
     text-decoration: none;
     display: inline-block;
 }
+
